[MD extensions] reduce flicker when toggling in details

This CL makes the Inspect Views section of the extension details page
stay present when disabling the extension. This reduces the UI flicker
when toggling extension options that cause the extension to be reloaded.

Bug: 777564
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I1e1307814943f546252e17c9b8515e05a4b30378
Reviewed-on: https://chromium-review.googlesource.com/818526
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Commit-Queue: Dave Schuyler <dschuyler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522974}
Former-commit-id: ae36376292a9f75297ab557e2edae7d4c17f9c9c